# async_io_crypto

./: .clippy.toml  Cargo.toml  Readme.md
.github/workflows/: rust.yml
src/: cipher.rs  decipher.rs  lib.rs
tests/: mod.rs
tests/data/: lorem.txt  lorem_big.txt
