[package]
name = "async_io_crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1"}
aead = { version = "0.5", features = ["stream", "bytes"] }
pin-project-lite = "0.2"
bytes = "1.2"
rand = "0.8"
tracing = "0.1"

[dev-dependencies]
chacha20poly1305 = { version = "0.10.1"}
rand_chacha = "0.3"
tokio = {version = "1", features = ["io-util", "macros", "rt", "fs"]}