[package]
name = "async_io_crypto"
version = "0.1.2"
edition = "2021"
authors = ["Charles Roussel"]
license = "MIT"
readme = "Readme.md"
repository = "https://github.com/chroussel/async_io_crypto"
homepage = "https://github.com/chroussel/async_io_crypto"
description = """
A rust library for handling AsyncRead with ciphering / deciphering.
"""
categories = ["asynchronous", "cryptography"]
keywords = ["io", "async", "aead", "ciphering"]

[dependencies]
tokio = {version = "1"}
aead = { version = "0.5", features = ["stream", "bytes"] }
pin-project-lite = "0.2"
bytes = "1"
rand = "0.8"
tracing = "0.1"
futures = "0.3"

[dev-dependencies]
chacha20poly1305 = { version = "0.10"}
rand_chacha = "0.3"
tokio = {version = "1", features = ["io-util", "macros", "rt", "fs", "rt-multi-thread"]}
tokio-test = "0.4"